--- a/devops.html
+++ b/devops.html
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698462881-cloud-devops-engineer-aws-devops-engineer'>Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698462881-cloud-devops-engineer-aws-devops-engineer'>Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -126,7 +126,7 @@
 <p><span class="badge badge-light">Calgary, ABCanada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1S4afwR&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=n1yaoMwo'>ServiceNow Careers - Technical Lead ? DevOps</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o1S4afwR&__jvst=Employee+Referral&__jvsd=sfrNBfwO&__jvsc=Twitter&bid=n1yaoMwo'>ServiceNow Careers - Technical Lead ? DevOps</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -178,7 +178,7 @@
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://orbitpeople.applytojob.com/apply/oHWBYGP2jX/AWSCloudDevOps-Engineer'>AWS/Cloud/DevOps Engineer - Orb IT People - Career Page</a></h5> 
+<h5><a href='http://orbitpeople.applytojob.com/apply/oHWBYGP2jX/AWSCloudDevOps-Engineer'>AWS/Cloud/DevOps Engineer - Orb IT People - Career Page</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -186,7 +186,7 @@
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/stars-group/job/orzrbfwm'>The Stars Group Careers - Senior DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/stars-group/job/orzrbfwm'>The Stars Group Careers - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -198,7 +198,7 @@
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -256,7 +256,7 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p><span class="badge badge-light">Chicago  Chicago  Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://qustodio.recruitee.com/o/devops-team-lead'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://qustodio.recruitee.com/o/devops-team-lead'>
       DevOps Team Lead - Qustodio
     </a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain  Barcelona</span></p>
@@ -351,7 +351,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://twincap.join.com/jobs/465195-it-devops-iot-ref-106146'>Job @ TwinCap (Zug): IT DevOps IoT / Ref. 106146 | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/465195-it-devops-iot-ref-106146'>Job @ TwinCap (Zug): IT DevOps IoT / Ref. 106146 | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -367,7 +367,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://tensor-tech.join.com/jobs/460117-devops-engineer'>Job @ Tensor Technologies (Zug): DevOps Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensor-tech.join.com/jobs/460117-devops-engineer'>Job @ Tensor Technologies (Zug): DevOps Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -391,7 +391,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/indigo/jobs/1931899'>Job Application for Senior Engineering Manager, DevOps at Indigo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indigo/jobs/1931899'>Job Application for Senior Engineering Manager, DevOps at Indigo</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
